// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlowingText should match the snapshot 1`] = `
<span
  class="sc-bdvvtL iTGPMb"
>
  Glowing Text
</span>
`;

exports[`GlowingText should match the snapshot 2`] = `
<span
  class="sc-bdvvtL djeFId"
>
  Glowing Text
</span>
`;

exports[`GlowingText should match the snapshot 3`] = `
<span
  class="sc-bdvvtL lfZOEg"
>
  Glowing Text
</span>
`;
